--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+# Docker Compose configuration
 
 services:
   # Django and DRF (main development container)
@@ -25,7 +25,7 @@ services:
     command: >
       sh -c "python manage.py migrate &&
              python manage.py collectstatic --noinput &&
-             gunicorn noti.wsgi:application --bind 0.0.0.0:8000 --workers 3 --worker-class uvicorn.workers.UvicornWorker"
+             gunicorn noti.wsgi:application --bind 0.0.0.0:8000 --workers 3"
 
   # PostgreSQL Database
   db:
