--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     command: >
       sh -c "python manage.py migrate &&
              python manage.py collectstatic --noinput &&
-             gunicorn noti.wsgi:application --bind 0.0.0.0:8000 --workers 3"
+             gunicorn noti.wsgi:application --bind 0.0.0.0:8000 --workers 3 --worker-class gunicorn.workers.sync.SyncWorker"
 
   # PostgreSQL Database
   db:
