--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ whitenoise = "^6.6.0"
 flower = "^2.0.1"
 django-extensions = "^3.2.3"
 pillow = "^10.1.0"
+django-filter = "^23.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
